more overflow fixes

--- a/src/sass/blocks/benefits.scss
+++ b/src/sass/blocks/benefits.scss
@@ -2,7 +2,6 @@
 
 .benefits {
   margin-bottom: 100px;
-  overflow: hidden;
   &__bg {
     transform: rotate(178.6deg) scale(-1, 1);
     position: absolute;
