--- a/src/sass/blocks/jumbotron.scss
+++ b/src/sass/blocks/jumbotron.scss
@@ -4,7 +4,6 @@
     padding: 114px 133px 20px 93px;
     margin-bottom: 120px;
     position: relative;
-    overflow: hidden;
     @media screen and (max-width: 768px) {
         padding: 100px 0 40px;
         margin-bottom: 60px;
