--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -59,6 +59,10 @@ img.image--rounded {
     overflow: hidden;
 }
 
+.page-overflow {
+    overflow: hidden;
+}
+
 .container {
     max-width: 1170px;
     margin: 0 auto;
